# cookiecutters

./: README.md
web/: cookiecutter.json
web/{{cookiecutter.project_slug}}/: .env  docker-compose.yml  requirements-dev.txt
web/{{cookiecutter.project_slug}}/alembic/: env.py
web/{{cookiecutter.project_slug}}/app/: auth.py  celery.py  config.py  tasks.py  utils.py
web/{{cookiecutter.project_slug}}/app/api/: deps.py
web/{{cookiecutter.project_slug}}/app/api/api_v1/: __init__.py  login.py  users.py
web/{{cookiecutter.project_slug}}/app/crud/: base.py  crud_user.py
web/{{cookiecutter.project_slug}}/app/models/: base.py  user.py
web/{{cookiecutter.project_slug}}/app/schemas/: __init__.py  token.py  user.py
web/{{cookiecutter.project_slug}}/backend/: Dockerfile  celeryworker.Dockerfile
web/{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
web/{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
web/{{cookiecutter.project_slug}}/backend/app/app/: auth.py  config.py  db.py  main.py  tasks.py
web/{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
web/{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/: login.py  users.py
web/{{cookiecutter.project_slug}}/backend/app/app/crud/: base.py  crud_user.py
web/{{cookiecutter.project_slug}}/backend/app/app/models/: user.py
web/{{cookiecutter.project_slug}}/backend/app/app/schemas/: __init__.py  token.py  user.py
web/{{cookiecutter.project_slug}}/backend/app/tests/: conftest.py  utils.py
web/{{cookiecutter.project_slug}}/backend/app/tests/api/api_v1/: test_users.py
web/{{cookiecutter.project_slug}}/frontend/app/: package-lock.json  package.json
